--- a/styles.css
+++ b/styles.css
@@ -85,14 +85,41 @@ main > .projects {
 .dashboard-buttons {
   display: flex;
   flex-direction: column;
-  gap: 24px;
 }
 
-.dashboard-item {
+.dashboard-item, .dashboard-item button, .github-link {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  padding: 6px 12px;
   gap: 24px;
+}
+
+.dashboard-item button {
+  background-color: inherit;
+  border: none;
+  font-size: inherit;
+  font-weight: inherit;
+}
+
+.dashboard-item:hover {
+  background-color: #463f3a;
+  border-radius: 18px;
+  cursor: pointer;
+}
+
+.dashboard-item .dashboard-logo:hover, .dashboard-item button:hover {
+  cursor: pointer;
+  color: #f7f9f5;
+}
+
+.github-link a button {
+  background-color: inherit;
+  border: none;
+}
+
+.github-link a button:hover {
+  cursor: pointer;
 }
 
 .searchbar, .utility, .user-info, .actions {
@@ -111,6 +138,9 @@ main > .projects {
   justify-content: flex-end;
   align-items: center;
 }
+.utility .fake-button:hover {
+  cursor: pointer;
+}
 
 .user-info {
   justify-content: flex-start;
@@ -128,6 +158,10 @@ main > .projects {
   color: #f7f9f5;
   border-radius: 17px;
   padding: 12px 24px;
+}
+
+.actions button:hover {
+  cursor: pointer;
 }
 
 .searchbar input {
@@ -172,6 +206,15 @@ div.project-actions {
   display: flex;
   justify-content: flex-end;
   gap: 8px;
+}
+
+div.project-actions button {
+  background-color: inherit;
+  border: none;
+}
+
+div.project-actions button:hover {
+  cursor: pointer;
 }
 
 div.announcements-card, div.trending-card {
