--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ ul li {
 div.container {
   min-height: 100vh;
   display: grid;
-  grid-template-rows: 1fr 4fr;
+  grid-template-rows: auto;
   grid-template-columns: 1fr 4fr;
 }
 
@@ -58,7 +58,7 @@ header {
   grid-column: 2 / 3;
   display: grid;
   grid-template-columns: 5fr 3fr;
-  padding: 0px 24px;
+  padding: 24px 24px;
   background-color: #8bbcb6;
   box-shadow: 4px 4px 8px lightgray;
 }
@@ -185,8 +185,8 @@ div.projects > p {
 
 div.all-projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
-  grid-auto-rows: 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+  grid-auto-rows: 360px;
   align-items: start;
   gap: 32px;
 }
